--- a/hw4/hw4.tex
+++ b/hw4/hw4.tex
@@ -76,9 +76,11 @@ $$(0,f_c(0),f_c(f_c(0)),f_c(f_c(f_c(0)))\cdots)$$
 	\item 局部连接性
 	\item 是封闭的紧集
 	\item 具有双曲成分
+    \item 面积为1.5065918561
 \end{enumerate}
 
-由封闭紧集的特性可以得出，曼德博集合中的点$c$必须满足$|z_n|\le 2$.
+由封闭紧集的特性可以得出，曼德博集合中的点$c$必须满足$|z_n|\le 2$；
+同朱莉娅集集相似，曼德博集合也使用相同的复二次多项式来进行迭代。
 
 \section{算法}
 曼德博集合一般用计算机程序计算。对于大多数的分形软件，例如Ultra fractal，内部已经有了比较成熟的例子。
@@ -106,7 +108,7 @@ Next
 \section{数值算例}
 数值算例的程序基于C++语言进行了完整的封装，只需从外部提供算法的迭代次数$N$、展示图像的中心点$ox$、$oy$及图像半径尺寸$dimension$，即可在images目录下输出目标图像。
 
-在Shell中进入$source$目录并执行$bash run$命令，将获得以下八幅控制参数变量的结果图像：
+在Shell中进入$source$目录并执行$bash\ run$命令，将获得以下八幅控制参数变量的结果图像：
 
 \textbf{Step.1} 改变迭代次数
 
