--- a/hw_final/docs/report.tex
+++ b/hw_final/docs/report.tex
@@ -7,12 +7,12 @@
 \usepackage{abstract}
 \usepackage{fancyhdr}
 \usepackage{multicol}
+\usepackage{listings}
 \usepackage[hidelinks]{hyperref}
 
 \setlength\columnsep{1cm}
 \pagenumbering{arabic}
 \CTEXsetup[format={\Large\bfseries}]{section}
-
 
 \title{Julia 集的分析和探索}
 \author{杨钧尹 3200103573 \\ \small{信息与计算科学}}
