--- a/hw_final/docs/report.tex
+++ b/hw_final/docs/report.tex
@@ -34,6 +34,8 @@
 \input{chapters/chapter3.tex}
 \input{chapters/chapter4.tex}
 \input{chapters/chapter5.tex}
+
+\newpage
 \bibliographystyle{IEEEtran}
 \bibliography{ref}
 
